--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/spring_boot
 config.uploads.path=E://Imagenes//SpringImagenes//
-
 # config.base.endpoint=/api/v2/productos --- Para muestros endpoints direactemente objetemos el resultado que queremo
 # la forma normal, con map entre otros
 config.base.endpoint=/api/productos
+
+spring.application.name=servicio-productos
+server.port:8002
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+
